<resources>
    <string name="app_name">ClockWise</string>
    <string name="signup_tv">Signup</string>
    <string name="first_name_ed">Enter your first name</string>
    <string name="last_name_ed">Enter your last name</string>
    <string name="email_ed">Enter your email</string>
    <string name="password_ed">Enter your password</string>
    <string name="confirm_password_ed">Confirm your password</string>
    <string name="signup_button">Sign up</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="login">Login</string>
    <string name="check_string">Remember me</string>
    <string name="have_account">Do not have an account?</string>
    <string name="navigation_drawer_open">Close navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="calender">Calendar</string>
    <string name="recordings">Recordings</string>
    <string name="start_studying">Study</string>
    <string name="home">Home</string>
    <string name="schedule_now">Schedule Now</string>
    <string name="event_name">Event Name</string>
    <string name="start_time">Start time</string>
    <string name="finish_time">Finish time</string>
    <string name="submit">Submit</string>
    <string name="date_of_event">Date of Event</string>
    <string name="event_description">Description</string>
    <string name="reminder_calendar">Reminder</string>
    <string name="stop_studying">Stop Studying</string>
    <string name="subject">Subject</string>
    <string name="describe_your_issue">Describe your issue</string>
</resources>