<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@drawable/calendar_bg"
    tools:context=".drawer.ContactFragment">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingBottom="16dp" />

    <!-- Contact Options Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:padding="10dp"
        android:orientation="vertical"
        android:elevation="4dp">

        <!-- Call Support -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/message_icon_id"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/sym_action_chat"
                app:tint="@color/light_blue" />

            <TextView
                android:id="@+id/message_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Messages Support"
                android:textSize="18sp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>

    <!-- Contact Form Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:padding="16dp"
        android:orientation="vertical"
        android:elevation="4dp"
        android:layout_marginTop="16dp">


        <EditText
            android:id="@+id/subject_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:textColor="@color/black"
            android:padding="12dp"
            android:gravity="top"
            android:inputType="text"
            android:background="@drawable/input_border"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/contact_message"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:hint="@string/describe_your_issue"
            android:gravity="top"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_border"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/contact_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/light_blue"
            android:textColor="@color/black"
            android:padding="14dp"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</LinearLayout>